includes/svdpi.h

typedef unsigned __int64 uint64_t;
typedef svScalar svBit; /* scalar */
typedef svScalar svLogic; /* scalar */
XXTERN svLogic svGetLogicArrElem (const svOpenArrayHandle s, int indx1, ...);
XXTERN svLogic svGetLogicArrElem1 (const svOpenArrayHandle s, int indx1);
XXTERN svLogic svGetLogicArrElem2 (const svOpenArrayHandle s, int indx1, int indx2);
XXTERN svLogic svGetLogicArrElem3 (const svOpenArrayHandle s, int indx1, int indx2,
                                   int indx3);
XXTERN void svPutLogicArrElem (const svOpenArrayHandle d, svLogic value, int indx1,
                               ...);
XXTERN void svPutLogicArrElem1 (const svOpenArrayHandle d, svLogic value, int indx1);
XXTERN void svPutLogicArrElem2 (const svOpenArrayHandle d, svLogic value, int indx1,
                                int indx2);
XXTERN void svPutLogicArrElem3 (const svOpenArrayHandle d, svLogic value, int indx1,
                                int indx2, int indx3);
XXTERN void svPutBitArrElem (const svOpenArrayHandle d, svBit value, int indx1, ...);
XXTERN void svPutBitArrElem1 (const svOpenArrayHandle d, svBit value, int indx1);
XXTERN void svPutBitArrElem2 (const svOpenArrayHandle d, svBit value, int indx1,
                              int indx2);
XXTERN void svPutBitArrElem3 (const svOpenArrayHandle d, svBit value, int indx1,
                              int indx2, int indx3);
/* Functions for working with DPI context */

/*
 * Retrieve the active instance scope currently associated with the executing
 * imported function.  Unless a prior call to svSetScope has occurred, this
 * is the scope of the function's declaration site, not call site.
 * Returns NULL if called from C code that is *not* an imported function.
 */
XXTERN svScope svGetScope();
/*
 * Set context for subsequent export function execution.
 * This function must be called before calling an export function, unless
 * the export function is called while executing an extern function. In that
 * case the export function shall inherit the scope of the surrounding extern
 * function. This is known as the "default scope".
 * The return is the previous active scope (as per svGetScope)
 */
XXTERN svScope svSetScope (const svScope scope);
/* Gets the fully qualified name of a scope handle */
XXTERN const char * svGetNameFromScope (const svScope);
/*
 * Retrieve svScope to instance scope of an arbitrary function declaration.
 * (can be either module, program, interface, or generate scope)
 * The return value shall be NULL for unrecognized scope names.
 */
XXTERN svScope svGetScopeFromName (const char * scopeName);
/*
 * Store an arbitrary user data pointer for later retrieval by svGetUserData()
 * The userKey is generated by the user. It must be guaranteed by the user to
 * be unique from all other userKey's for all unique data storage requirements
 * It is recommended that the address of static functions or variables in the
 * user's C code be used as the userKey.
 * It is illegal to pass in NULL values for either the scope or userData
 * arguments. It is also an error to call svPutUserData() with an invalid
 * svScope. This function returns -1 for all error cases, 0 upon success. It is
 * suggested that userData values of 0 (NULL) not be used as otherwise it can
 * be impossible to discern error status returns when calling svGetUserData()
 */
XXTERN int svPutUserData (const svScope scope, void * userKey, void * userData);
/*
 * Retrieve an arbitrary user data pointer that was previously
 * stored by a call to svPutUserData(). See the comment above
 * svPutUserData() for an explanation of userKey, as well as
 * restrictions on NULL and illegal svScope and userKey values.
 * This function returns NULL for all error cases, 0 upon success.
 * This function also returns NULL in the event that a prior call
 * to svPutUserData() was never made.
 */
XXTERN void * svGetUserData (const svScope scope, void * userKey);
/*
 * Returns the file and line number in the SV code from which the extern call
 * was made. If this information available, returns TRUE and updates fileName
 * and lineNumber to the appropriate values. Behavior is unpredictable if
 * fileName or lineNumber are not appropriate pointers. If this information is
 * not available return FALSE and contents of fileName and lineNumber not
 * modified. Whether this information is available or not is implementation
 * specific. Note that the string provided (if any) is owned by the SV
 * implementation and is valid only until the next call to any SV function.
 * Applications must not modify this string or free it
 */
XXTERN int svGetCallerInfo (const char ** fileName, int * lineNumber);
/*
 * Returns 1 if the current execution thread is in the disabled state.
 * Disable protocol must be adhered to if in the disabled state.
 */
XXTERN int svIsDisabledState();
/*
 * Imported functions call this API function during disable processing to
 * acknowledge that they are correctly participating in the DPI disable protocol.
 * This function must be called before returning from an imported function that is
 * in the disabled state.
 */
XXTERN void svAckDisabledState();
typedef unsigned int svBitVec32;/* (a chunk of) packed bit array */
typedef struct
{
    unsigned int c;
    unsigned int d;
}
svLogicVec32; /* (a chunk of) packed logic array */
/* reference to a standalone packed array */
typedef void * svBitPackedArrRef;
typedef void * svLogicPackedArrRef;
/*
 * total size in bytes of the simulator's representation of a packed array
 * width in bits
 */
XXTERN int svSizeOfBitPackedArr (int width);
XXTERN int svSizeOfLogicPackedArr (int width);
/* Translation between the actual representation and the canonical representation */

/* s=source, d=destination, w=width */
/* actual <-- canonical */
XXTERN void svPutBitVec32 (svBitPackedArrRef d, const svBitVec32 * s, int w);
XXTERN void svPutLogicVec32 (svLogicPackedArrRef d, const svLogicVec32 * s, int w);
/* canonical <-- actual */
XXTERN void svGetBitVec32 (svBitVec32 * d, const svBitPackedArrRef s, int w);
XXTERN void svGetLogicVec32 (svLogicVec32 * d, const svLogicPackedArrRef s, int w);
/*
 * Bit select functions
 * Packed arrays are assumed to be indexed n-1:0,
 * where 0 is the index of least significant bit
 */

/* s=source, i=bit-index */
XXTERN svBit svGetSelectBit (const svBitPackedArrRef s, int i);
XXTERN svLogic svGetSelectLogic (const svLogicPackedArrRef s, int i);
/* d=destination, i=bit-index, s=scalar */
XXTERN void svPutSelectBit (svBitPackedArrRef d, int i, svBit s);
XXTERN void svPutSelectLogic (svLogicPackedArrRef d, int i, svLogic s);
/*
 * functions for part select
 *
 * a narrow (<=32 bits) part select is copied between
 * the implementation representation and a single chunk of
 * canonical representation
 * Normalized ranges and indexing [n-1:0] are used for both arrays:
 * the array in the implementation representation and the canonical array.
 *
 * s=source, d=destination, i=starting bit index, w=width
 * like for variable part selects; limitations: w <= 32
 */

/* canonical <-- actual */
XXTERN void svGetPartSelectBit (svBitVec32 * d, const svBitPackedArrRef s,
                                int i, int w);
XXTERN svBitVec32 svGetBits (const svBitPackedArrRef s, int i, int w);
XXTERN svBitVec32 svGet32Bits (const svBitPackedArrRef s, int i); /* 32-bits */
XXTERN uint64_t svGet64Bits (const svBitPackedArrRef s, int i);
/* 64-bits */
XXTERN void svGetPartSelectLogic (svLogicVec32 * d, const svLogicPackedArrRef s,
                                  int i, int w);
/* actual <-- canonical */
XXTERN void svPutPartSelectBit (svBitPackedArrRef d, const svBitVec32 s,
                                int i, int w);
XXTERN void svPutPartSelectLogic (svLogicPackedArrRef d, const svLogicVec32 s,
                                  int i, int w);
/*
 * Functions for open array translation between simulator and canonical representations.
 * These functions copy the whole packed array in either direction. The user is
 * responsible for allocating an array in the canonical representation.
 */

/* s=source, d=destination */
/* actual <-- canonical */
XXTERN void svPutBitArrElemVec32 (const svOpenArrayHandle d, const svBitVec32 * s,
                                  int indx1, ...);
XXTERN void svPutBitArrElem1Vec32 (const svOpenArrayHandle d, const svBitVec32 * s,
                                   int indx1);
XXTERN void svPutBitArrElem2Vec32 (const svOpenArrayHandle d, const svBitVec32 * s,
                                   int indx1, int indx2);