wrapper/svdpi_wrapper.nim

else:
  static :
    hint("Declaration of " & "svGetLogicArrElem" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem1):
  proc svGetLogicArrElem1*(s: svOpenArrayHandle_1090519512; indx1: cint): svLogic_1090519498 {.
      cdecl, importc: "svGetLogicArrElem1".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem1" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem2):
  proc svGetLogicArrElem2*(s: svOpenArrayHandle_1090519512; indx1: cint;
                           indx2: cint): svLogic_1090519498 {.cdecl,
      importc: "svGetLogicArrElem2".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem2" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem3):
  proc svGetLogicArrElem3*(s: svOpenArrayHandle_1090519512; indx1: cint;
                           indx2: cint; indx3: cint): svLogic_1090519498 {.
      cdecl, importc: "svGetLogicArrElem3".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem3" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem):
  proc svPutLogicArrElem*(d: svOpenArrayHandle_1090519512; value: svLogic_1090519498;
                          indx1: cint): void {.cdecl, varargs,
      importc: "svPutLogicArrElem".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem1):
  proc svPutLogicArrElem1*(d: svOpenArrayHandle_1090519512; value: svLogic_1090519498;
                           indx1: cint): void {.cdecl,
      importc: "svPutLogicArrElem1".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem1" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem2):
  proc svPutLogicArrElem2*(d: svOpenArrayHandle_1090519512; value: svLogic_1090519498;
                           indx1: cint; indx2: cint): void {.cdecl,
      importc: "svPutLogicArrElem2".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem2" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem3):
  proc svPutLogicArrElem3*(d: svOpenArrayHandle_1090519512; value: svLogic_1090519498;
                           indx1: cint; indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutLogicArrElem3".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem3" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem):
  proc svPutBitArrElem*(d: svOpenArrayHandle_1090519512; value: svBit_1090519496;
                        indx1: cint): void {.cdecl, varargs,
      importc: "svPutBitArrElem".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem1):
  proc svPutBitArrElem1*(d: svOpenArrayHandle_1090519512; value: svBit_1090519496;
                         indx1: cint): void {.cdecl, importc: "svPutBitArrElem1".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem1" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem2):
  proc svPutBitArrElem2*(d: svOpenArrayHandle_1090519512; value: svBit_1090519496;
                         indx1: cint; indx2: cint): void {.cdecl,
      importc: "svPutBitArrElem2".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem2" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem3):
  proc svPutBitArrElem3*(d: svOpenArrayHandle_1090519512; value: svBit_1090519496;
                         indx1: cint; indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutBitArrElem3".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem3" &
        " already exists, not redeclaring")
when not declared(svGetScope):
  proc svGetScope*(): svScope_1090519510 {.cdecl, importc: "svGetScope".}
else:
  static :
    hint("Declaration of " & "svGetScope" & " already exists, not redeclaring")
when not declared(svSetScope):
  proc svSetScope*(scope: svScope_1090519510): svScope_1090519510 {.cdecl,
      importc: "svSetScope".}
else:
  static :
    hint("Declaration of " & "svSetScope" & " already exists, not redeclaring")
when not declared(svGetNameFromScope):
  proc svGetNameFromScope*(a0: svScope_1090519510): cstring {.cdecl,
      importc: "svGetNameFromScope".}
else:
  static :
    hint("Declaration of " & "svGetNameFromScope" &
        " already exists, not redeclaring")
when not declared(svGetScopeFromName):
  proc svGetScopeFromName*(scopeName: cstring): svScope_1090519510 {.cdecl,
      importc: "svGetScopeFromName".}
else:
  static :
    hint("Declaration of " & "svGetScopeFromName" &
        " already exists, not redeclaring")
when not declared(svPutUserData):
  proc svPutUserData*(scope: svScope_1090519510; userKey: pointer;
                      userData: pointer): cint {.cdecl, importc: "svPutUserData".}
else:
  static :
    hint("Declaration of " & "svPutUserData" &
        " already exists, not redeclaring")
when not declared(svGetUserData):
  proc svGetUserData*(scope: svScope_1090519510; userKey: pointer): pointer {.
      cdecl, importc: "svGetUserData".}
else:
  static :
    hint("Declaration of " & "svGetUserData" &
        " already exists, not redeclaring")
when not declared(svGetCallerInfo):
  proc svGetCallerInfo*(fileName: ptr cstring; lineNumber: ptr cint): cint {.
      cdecl, importc: "svGetCallerInfo".}
else:
  static :
    hint("Declaration of " & "svGetCallerInfo" &
        " already exists, not redeclaring")
when not declared(svIsDisabledState):
  proc svIsDisabledState*(): cint {.cdecl, importc: "svIsDisabledState".}
else:
  static :
    hint("Declaration of " & "svIsDisabledState" &
        " already exists, not redeclaring")
when not declared(svAckDisabledState):
  proc svAckDisabledState*(): void {.cdecl, importc: "svAckDisabledState".}
else:
  static :
    hint("Declaration of " & "svAckDisabledState" &
        " already exists, not redeclaring")
when not declared(svSizeOfBitPackedArr):
  proc svSizeOfBitPackedArr*(width: cint): cint {.cdecl,
      importc: "svSizeOfBitPackedArr".}
else:
  static :
    hint("Declaration of " & "svSizeOfBitPackedArr" &
        " already exists, not redeclaring")
when not declared(svSizeOfLogicPackedArr):
  proc svSizeOfLogicPackedArr*(width: cint): cint {.cdecl,
      importc: "svSizeOfLogicPackedArr".}
else:
  static :
    hint("Declaration of " & "svSizeOfLogicPackedArr" &
        " already exists, not redeclaring")
when not declared(svPutBitVec32):
  proc svPutBitVec32*(d: svBitPackedArrRef_1090519520; s: ptr svBitVec32_1090519514;
                      w: cint): void {.cdecl, importc: "svPutBitVec32".}
else:
  static :
    hint("Declaration of " & "svPutBitVec32" &
        " already exists, not redeclaring")
when not declared(svPutLogicVec32):
  proc svPutLogicVec32*(d: svLogicPackedArrRef_1090519522; s: ptr svLogicVec32_1090519518;
                        w: cint): void {.cdecl, importc: "svPutLogicVec32".}
else:
  static :
    hint("Declaration of " & "svPutLogicVec32" &
        " already exists, not redeclaring")
when not declared(svGetBitVec32):
  proc svGetBitVec32*(d: ptr svBitVec32_1090519514; s: svBitPackedArrRef_1090519520;
                      w: cint): void {.cdecl, importc: "svGetBitVec32".}
else:
  static :
    hint("Declaration of " & "svGetBitVec32" &
        " already exists, not redeclaring")
when not declared(svGetLogicVec32):
  proc svGetLogicVec32*(d: ptr svLogicVec32_1090519518; s: svLogicPackedArrRef_1090519522;
                        w: cint): void {.cdecl, importc: "svGetLogicVec32".}
else:
  static :
    hint("Declaration of " & "svGetLogicVec32" &
        " already exists, not redeclaring")
when not declared(svGetSelectBit):
  proc svGetSelectBit*(s: svBitPackedArrRef_1090519520; i: cint): svBit_1090519496 {.
      cdecl, importc: "svGetSelectBit".}
else:
  static :
    hint("Declaration of " & "svGetSelectBit" &
        " already exists, not redeclaring")
when not declared(svGetSelectLogic):
  proc svGetSelectLogic*(s: svLogicPackedArrRef_1090519522; i: cint): svLogic_1090519498 {.
      cdecl, importc: "svGetSelectLogic".}
else:
  static :
    hint("Declaration of " & "svGetSelectLogic" &
        " already exists, not redeclaring")
when not declared(svPutSelectBit):
  proc svPutSelectBit*(d: svBitPackedArrRef_1090519520; i: cint; s: svBit_1090519496): void {.
      cdecl, importc: "svPutSelectBit".}
else:
  static :
    hint("Declaration of " & "svPutSelectBit" &
        " already exists, not redeclaring")
when not declared(svPutSelectLogic):
  proc svPutSelectLogic*(d: svLogicPackedArrRef_1090519522; i: cint; s: svLogic_1090519498): void {.
      cdecl, importc: "svPutSelectLogic".}
else:
  static :
    hint("Declaration of " & "svPutSelectLogic" &
        " already exists, not redeclaring")
when not declared(svGetPartSelectBit):
  proc svGetPartSelectBit*(d: ptr svBitVec32_1090519514; s: svBitPackedArrRef_1090519520;
                           i: cint; w: cint): void {.cdecl,
      importc: "svGetPartSelectBit".}
else:
  static :
    hint("Declaration of " & "svGetPartSelectBit" &
        " already exists, not redeclaring")
when not declared(svGetBits):
  proc svGetBits*(s: svBitPackedArrRef_1090519520; i: cint; w: cint): svBitVec32_1090519514 {.
      cdecl, importc: "svGetBits".}
else:
  static :
    hint("Declaration of " & "svGetBits" & " already exists, not redeclaring")
when not declared(svGet32Bits):
  proc svGet32Bits*(s: svBitPackedArrRef_1090519520; i: cint): svBitVec32_1090519514 {.
      cdecl, importc: "svGet32Bits".}
else:
  static :
    hint("Declaration of " & "svGet32Bits" & " already exists, not redeclaring")
when not declared(svGet64Bits):
  proc svGet64Bits*(s: svBitPackedArrRef_1090519520; i: cint): uint64 {.cdecl,
      importc: "svGet64Bits".}
else:
  static :
    hint("Declaration of " & "svGet64Bits" & " already exists, not redeclaring")
when not declared(svGetPartSelectLogic):
  proc svGetPartSelectLogic*(d: ptr svLogicVec32_1090519518;
                             s: svLogicPackedArrRef_1090519522; i: cint; w: cint): void {.
      cdecl, importc: "svGetPartSelectLogic".}
else:
  static :
    hint("Declaration of " & "svGetPartSelectLogic" &
        " already exists, not redeclaring")
when not declared(svPutPartSelectBit):
  proc svPutPartSelectBit*(d: svBitPackedArrRef_1090519520; s: svBitVec32_1090519514;
                           i: cint; w: cint): void {.cdecl,
      importc: "svPutPartSelectBit".}
else:
  static :
    hint("Declaration of " & "svPutPartSelectBit" &
        " already exists, not redeclaring")
when not declared(svPutPartSelectLogic):
  proc svPutPartSelectLogic*(d: svLogicPackedArrRef_1090519522; s: svLogicVec32_1090519518;
                             i: cint; w: cint): void {.cdecl,
      importc: "svPutPartSelectLogic".}
else:
  static :
    hint("Declaration of " & "svPutPartSelectLogic" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElemVec32):
  proc svPutBitArrElemVec32*(d: svOpenArrayHandle_1090519512; s: ptr svBitVec32_1090519514;
                             indx1: cint): void {.cdecl, varargs,
      importc: "svPutBitArrElemVec32".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElemVec32" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem1Vec32):
  proc svPutBitArrElem1Vec32*(d: svOpenArrayHandle_1090519512;
                              s: ptr svBitVec32_1090519514; indx1: cint): void {.
      cdecl, importc: "svPutBitArrElem1Vec32".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem1Vec32" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem2Vec32):
  proc svPutBitArrElem2Vec32*(d: svOpenArrayHandle_1090519512;
                              s: ptr svBitVec32_1090519514; indx1: cint;
                              indx2: cint): void {.cdecl,
      importc: "svPutBitArrElem2Vec32".}
